fixed horizontal scroll

--- a/react-app/src/index.scss
+++ b/react-app/src/index.scss
@@ -44,6 +44,7 @@ body {
     font-family: helvetica;
     background: var(--color-body);
     color: var(--textColor-body);
+    overflow-x: hidden;
 }
 
 div[data-expander="expanded"] {
